--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@faker-js/faker": "^6.0.0",
     "@heroicons/react": "^1.0.6",
+    "firebase": "^9.6.10",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwind-scrollbar": "^1.3.1",
